Remove outdated jvm args